--- a/flit.ini
+++ b/flit.ini
@@ -1,8 +1,8 @@
 [metadata]
-module = bash_kernel
-author = Thomas Kluyver
-author-email = thomas@kluyver.me.uk
-home-page = https://github.com/takluyver/bash_kernel
+module = sDL_kernel
+author = Eugenio Rocha
+author-email = eugenio@ua.pt
+home-page = https://github.com/sDLsystem/sDL_kernel
 requires = pexpect (>=4.0)
 description-file = README.rst
 classifiers = Framework :: IPython
